[tool.poetry]
name = "reboundtest"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.7"
rebound = "^3.12.1"
matplotlib = "^3.2.1"
pyqt5 = "^5.14.1"
ipywidgets = "^7.5.1"
scipy = "^1.4.1"
graphviz = "^0.16"
py-spy = "^0.3.3"
mypy = "^0.790"
rebound-stubs = {git = "https://github.com/Findus23/rebound-stubs.git", rev = "main"}
setproctitle = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
