[tool.poetry]
name = "reboundtest"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rebound = "3.17.3"
matplotlib = "^3.2.1"
ipywidgets = "^7.5.1"
scipy = "^1.4.1"
graphviz = "^0.17"
py-spy = "^0.3.3"
mypy = "^0.910"
rebound-stubs = {git = "https://github.com/Findus23/rebound-stubs.git", rev = "3623b3e2e5ece088ab8aacd3b7f67a9b1114eba1"}
setproctitle = "^1.2.2"
libconf = "^2.0.1"
PyYAML = "^5.4.1"
pandas = "^1.2.3"
h5py = "^3.6.0"

[tool.poetry.dev-dependencies]
torch = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
